--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: var(--main-font);
+  color: #212121;
 }
 
 .list {
@@ -26,12 +27,14 @@ body {
   background-color: #2196f3;
   border-radius: 4px;
   border: 0px;
+  cursor: pointer;
 }
 
 /*****HEADER*****/
 .navigation__logo{
     width: 145px;
     height: 31px;
+    cursor: pointer;
 }
 
 .navigation__link,
@@ -123,6 +126,7 @@ body {
 .footer__logo{
     width: 145px;
     height: 31px;
+    cursor: pointer;
 }
 
 
